Changed the name of ocra.ttf

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "ocra";
-    src: url("ocra.ttf") format("truetype");
+    src: url("ocr-a.ttf") format("truetype");
 }
 
 @font-face {
