--- a/style.css
+++ b/style.css
@@ -14,11 +14,15 @@
 }
 
 body{
+	color: rgb(0, 255, 0);
+	/*text-shadow: 0px 0px 5px rgba(0, 255, 0, 0.8);*/
+	
 	font-family: "ocra", Verdana, Tahoma;
-	background: black;
+	
+	background-color: black;
 	
 	line-height: 1.3em;
-    font-size: 1.5em;
+    font-size: 1.3em;
 }
 
 #inputField{
@@ -27,98 +31,12 @@ body{
 }
 
 .input{
-	color: white;
-	
 	margin-top: -15px;
 	margin-bottom: -15px;
 }
 
-.color_one{
-	color: white;
+.default_cmd{
 	display: block;
-	
-	margin-top: -15px;
-	margin-bottom: -15px;
-}
-
-.color_two{
-	color: #ffbc00;
-	display: block;
-	
-	margin-top: -15px;
-	margin-bottom: -15px;
-}
-
-.color_three{
-	color: blue;
-	display: block;
-	
-	margin-top: -15px;
-	margin-bottom: -15px;
-}
-
-.flag{
-	font-family: "microstyle", Verdana, Tahoma;
-	color: black;
-	background-color: #ffbc00;
-	padding: 15px 15px 12px 15px;
-	font-size: 2em;
-	line-height: 1.7em;
-	
-	display: block;
-	
-	position: relative;
-    top: 2px;
-	
-	margin-top: -15px;
-	margin-bottom: -15px;
-}
-
-.highlight{
-	font-family: "microstyle", Verdana, Tahoma;
-    color: black;
-    background-color: white;
-    padding: 5px 0px 0px 15px;
-    font-size: 1.3em;
-	
-	display: block;
-	
-	position: relative;
-    top: 2px;
-	
-	margin-top: -15px;
-	margin-bottom: -15px;
-}
-
-.highlight_big{
-	font-family: "microstyle", Verdana, Tahoma;
-	color: black;
-	background-color: white;
-	padding: 15px 15px 12px 15px;
-	font-size: 2em;
-	line-height: 1.7em;
-	
-	display: block;
-	
-	position: relative;
-    top: 2px;
-	
-	margin-top: -15px;
-	margin-bottom: -15px;
-}
-
-.error{
-	font-family: "microstyle", Verdana, Tahoma;
-	color: black;
-	background-color: #ff0000;
-	padding: 15px 15px 12px 15px;
-	font-size: 2em;
-	line-height: 1.7em;
-	
-	display: block;
-	
-	position: relative;
-    top: 2px;
 	
 	margin-top: -15px;
 	margin-bottom: -15px;
