--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 body{
 	color: rgb(0, 255, 0);
-	text-shadow: 0px 0px 50px rgba(0, 255, 0, 0.8);
+	text-shadow: 0px 0px 50px rgba(0, 255, 0, 0.5);
 	
 	font-family: "dos", Verdana, Tahoma;
 	
@@ -15,11 +15,13 @@ body{
     font-size: 2em;
 }
 
-#inputField{
-    display: block;
-	
+span{
 	margin-top: -15px;
 	margin-bottom: -15px;
+}
+
+#inputField{
+    display: block;
 }
 
 .input{
@@ -28,9 +30,6 @@ body{
 
 .default_cmd{
 	display: block;
-	
-	margin-top: -15px;
-	margin-bottom: -15px;
 }
 
 #container{
